# digraph

./: .babelrc  .dockerignore  .eslintignore  .eslintrc.js  .flowconfig  .gitignore  CODEOWNERS  Gopkg.toml  LICENSE.md  Makefile  Procfile  Procfile.dev  Procfile.logs  Procfile.logs-next  Procfile.logs-prod  Procfile.prod  Procfile.prod-logs  Procfile.proxies  Procfile.proxies-next  Procfile.proxies-prod  README.md  TODO.md  cron.go  docker-compose.yml  go.mod  go.sum  gqlgen.yml  hot.proxy.js  jest.config.js  package.json  postcss.config.js  razzle.config.js  resolver.go  resolvers.go  schema.graphql  server.go  sqlboiler.yaml  tsconfig.json  webpack.config.js
backend/: Cargo.toml  Makefile
backend/db/: schema.sql
backend/src/: config.rs  errors.rs  prelude.rs  store.rs
backend/src/git/: activity.rs  checks.rs  client.rs  ext.rs  search.rs  stats.rs  topic.rs
backend/src/graphql/: alert.rs  git.rs  psql.rs  repository.rs  session.rs  topic.rs  user.rs  view.rs
backend/src/http/: mod.rs  page.rs  repo_url.rs
backend/src/psql/: mod.rs  organization.rs  repository.rs  session.rs  user.rs
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/changes/8X/Ah/YtdSm9fC20pHyekm2KUEAASS5SIrk89ArRqpFLg3jsxxhXATAkywszbVLZls/: change.yaml
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/changes/Mb/fH/nCNFTSfOQb7X86vT3p4OEZrw6aXIZCAFqYj94erzVI5EJ5eL9bzFVQLG4GjN/: change.yaml
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/changes/Z0/qL/qmx2mtBhIUNqVTCEpAGnN0Mi67jZWW0dvTWKwVZ9Q3n5OuAbZvcVFXZ38gNc/: change.yaml
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/changes/aK/nZ/ZLWLSntEPXjz24ThiAA3hpaBh4sAXMFvmY5G5ejBwI9zjzrw6tCkAOpnhN4z/: change.yaml
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/indexes/search/: 13.yaml  an.yaml  ch.yaml  dr.yaml  fl.yaml  ho.yaml  hu.yaml  to.yaml  wa.yaml
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/indexes/synonyms/phrases/: cl.yaml
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/indexes/synonyms/tokens/: ex.yaml
backend/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/objects/00/00/2/: object.yaml
backend/tests/git/: fixtures.rs  search.rs  topic.rs
client/: Dockerfile  (+20 more)
rust/: Cargo.toml  Makefile  TODO.md
rust/db/: schema.sql
rust/db/migrations/: 1654735397_add-guest-user.sql  1660097082-seed-data.sql  1660097082_seed_data.sql  1660344176_require_avatar_url.sql
rust/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  prelude.rs  query.rs  repo.rs  state.rs  store.rs  types.rs
rust/src/git/: account.rs  activity.rs  checks.rs  client.rs  collections.rs  ext.rs  external.rs  index.rs  link.rs  loader.rs  mod.rs  repository.rs  search.rs  stats.rs  testing.rs  topic.rs  types.rs
rust/src/git/core/: mod.rs
rust/src/graphql/: activity.rs  alert.rs  git.rs  git_object.rs  link.rs  mod.rs  mutation.rs  organization.rs  psql.rs  query.rs  relay.rs  repository.rs  search.rs  session.rs  synonym.rs  time.rs  timerange.rs  topic.rs  user.rs  view.rs
rust/src/http/: mod.rs  page.rs  repo_url.rs
rust/src/psql/: activity.rs  link.rs  mod.rs  organization.rs  queries.rs  registration.rs  repo.rs  repository.rs  search.rs  session.rs  shared.rs  synonym.rs  synonyms.rs  topic.rs  user.rs
rust/src/psql/link/: loader.rs  repo.rs
rust/src/psql/topic/: loader.rs  mod.rs  repo.rs
rust/src/redis/: mod.rs
rust/src/schema/: activity.rs  alert.rs  link.rs  mod.rs  mutation.rs  organization.rs  query.rs  relay.rs  repository.rs  search.rs  session.rs  synonym.rs  timerange.rs  topic.rs  user.rs  view.rs  viewer.rs
rust/src/server/: mod.rs
rust/src/server/ports/: mod.rs
rust/src/server/ports/outgoing/: link.rs  topic.rs
rust/src/server/services/: link.rs  mod.rs  topic.rs
rust/src/typesense/: mod.rs
rust/tests/: lib.rs
rust/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/indexes/search/: ro.yaml  st.yaml
rust/tests/fixtures/simple/32212616-fc1b-11e8-8eda-b70af6d8d09f/indexes/synonyms/phrases/: we.yaml
rust/tests/fixtures/simple/wiki/indexes/search/: 13.yaml  af.yaml  an.yaml  ch.yaml  cl.yaml  do.yaml  dr.yaml  ex.yaml  fl.yaml  fr.yaml  gl.yaml  ho.yaml  hu.yaml  no.yaml  of.yaml  ov.yaml  ro.yaml  st.yaml  th.yaml  to.yaml  wa.yaml  we.yaml
rust/tests/fixtures/simple/wiki/indexes/synonyms/: a+.yaml  ev.yaml  ex.yaml
rust/tests/fixtures/simple/wiki/indexes/synonyms/phrases/: a+.yaml  cl.yaml  ev.yaml  ex.yaml  we.yaml
rust/tests/fixtures/simple/wiki/indexes/synonyms/tokens/: an.yaml  ch.yaml  cl.yaml  ex.yaml  no.yaml  ro.yaml  to.yaml  we.yaml
rust/tests/git/: fixtures.rs  link.rs  mod.rs  repo.rs  search.rs  topic.rs
(+1712 files in other folders)
