[package]
name = "digraph"
version = "0.1.0"
authors = ["Eric Walker <eric.walker@gmail.com>"]
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "cron"
path = "src/bin/cron.rs"

[[bin]]
name = "show"
path = "src/bin/show.rs"

[[bin]]
name = "export"
path = "src/bin/export.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[test]]
name = "integration-tests"
path = "tests/lib.rs"

[dependencies]
async-graphql = { version = "7", features = ["apollo_tracing", "cbor", "dataloader", "log", "uuid"] }
async-graphql-axum = "7"
axum = { version = "0" }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
base64 = "0"
chrono = { version = "0", features = ["serde"] }
derivative = "2"
dotenv = "0"
env_logger = "0"
envy = "0"
futures = "0"
geotime = "0"
getopts = "0"
git2 = "0"
headers = "0.4.0"
itertools = "0"
lazy_static = "1"
log = "0"
opentelemetry = { version = "0" }
quick-error = "2"
rand = "0"
redis = "0"
regex = "1"
scraper = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
sha2 = "0"
sqlx = { version = "0", features = ["chrono", "json", "postgres", "macros", "migrate", "uuid", "runtime-tokio-rustls"] }
strum = "0"
strum_macros = "0"
time = "0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
unidecode = "0"
ureq = "2"
url = "2"
uuid = { version = "1", features = ["v4", "fast-rng"]}
void = "1"

[dev-dependencies]
fs_extra = "1"
tempfile = "3"
