[package]
name = "digraph"
version = "0.0.1"
authors = ["Eric Walker <eric.walker@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
async-graphql = { version = "3", features = ["apollo_tracing", "dataloader", "uuid"] }
async-graphql-actix-web = "3"
async-std = "1"
async-trait = "0"
base64 = "0"
chrono = "0"
dotenv = "0"
env_logger = "0"
envy = "0"
futures = "0"
itertools = "0"
lazy_static = "1"
log = "0"
quick-error = "2"
regex = "1"
serde = "1"
serde_json = "1"
sqlx = { version = "0", features = ["chrono", "json", "postgres", "macros", "uuid", "runtime-actix-native-tls"] }
time = "0"
uuid = { version = "1", features = ["v4", "fast-rng"]}
