[package]
name = "digraph"
version = "0.1.0"
authors = ["Eric Walker <eric.walker@gmail.com>"]
edition = "2021"

[[bin]]
name = "frontend"
path = "src/bin/frontend.rs"

[[bin]]
name = "cron"
path = "src/bin/cron.rs"

[dependencies]
actix-web = "4"
async-graphql = { version = "4", features = ["apollo_tracing", "cbor", "dataloader", "log", "uuid"] }
async-graphql-actix-web = "4"
async-std = "1"
async-trait = "0"
base64 = "0"
chrono = { version = "0", features = ["serde"] }
derivative = "2"
dotenv = "0"
env_logger = "0"
envy = "0"
futures = "0"
itertools = "0"
lazy_static = "1"
log = "0"
quick-error = "2"
regex = "1"
reqwest = "0"
scraper = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0"
sqlx = { version = "0.6", features = ["chrono", "json", "postgres", "macros", "uuid", "runtime-actix-native-tls"] }
time = "0"
url = "2"
uuid = { version = "1", features = ["v4", "fast-rng"]}
