[package]
name = "digraph"
version = "0.1.0"
authors = ["Eric Walker <eric.walker@gmail.com>"]
edition = "2021"

[[bin]]
name = "frontend"
path = "src/bin/frontend.rs"

[[bin]]
name = "cron"
path = "src/bin/cron.rs"

[[bin]]
name = "show"
path = "src/bin/show.rs"

[[bin]]
name = "export"
path = "src/bin/export.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[test]]
name = "integration-tests"
path = "tests/lib.rs"

[dependencies]
actix-web = "4"
async-graphql = { version = "4", features = ["apollo_tracing", "cbor", "dataloader", "log", "uuid"] }
async-graphql-actix-web = "4"
async-std = "1"
async-trait = "0"
base64 = "0"
chrono = { version = "0", features = ["serde"] }
derivative = "2"
dotenv = "0"
env_logger = "0"
envy = "0"
futures = "0"
geotime = { git = "https://github.com/emwalker/geotime", branch = "main" }
getopts = "0"
git2 = "0"
itertools = "0"
lazy_static = "1"
log = "0"
quick-error = "2"
rand = "0"
redis = "0"
regex = "1"
reqwest = { version = "0.11", features = ["default-tls"] }
scraper = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
sha2 = "0"
sqlx = { version = "0.6", features = ["chrono", "json", "postgres", "macros", "migrate", "uuid", "runtime-actix-native-tls"] }
strum = "0"
strum_macros = "0"
time = "0"
unidecode = "0"
url = "2"
uuid = { version = "1", features = ["v4", "fast-rng"]}
void = "1"

[dev-dependencies]
fs_extra = "1"
tempfile = "3"
